# mcp-1st-birthday-ai-act

./: .env.example  .gitignore  AGENT_IMPLEMENTATION.md  AI_SYSTEMS_TAVILY_IMPLEMENTATION.md  COMPLIANCE_MATRIX.md  DEPLOYMENT.md  DOMAIN_AUTODISCOVERY.md  ENHANCEMENTS_OVERVIEW.md  EU_AI_ACT_RESEARCH_INTEGRATION.md  FINAL_SETUP_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_AGENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESEARCH_IMPLEMENTATION_COMPLETE.md  RUN_LOCAL.sh  SUBMISSION.md  TAVILY_INTEGRATION.md  TAVILY_RESEARCH_SUMMARY.md  USER_SPECIFIED_SYSTEMS.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.github/: renovate.json
.github/workflows/: deploy-hf-space.yml
apps/eu-ai-act-agent/: .gitignore  API.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.chatgpt-mcp  EXAMPLES.md  QUICKSTART.md  README.md  README_HF.md  biome.json  package.json  pyproject.toml  requirements.txt  start.sh  tsconfig.json  tsup.config.ts
apps/eu-ai-act-agent/src/: .mcp_url  chatgpt_app.py  gradio_app.py  server.ts
apps/eu-ai-act-agent/src/agent/: index.ts  prompts.ts  tools.ts
apps/eu-ai-act-agent/src/types/: index.ts
apps/web/: next.config.mjs  package.json  tsconfig.json
modal/: README.md  deploy.sh  gpt_oss_inference.py  requirements.txt
scripts/: deploy-chatgpt-mcp.sh  deploy-hf.sh
tooling/github/: package.json
tooling/tailwind/: biome.json  package.json  tsconfig.json
tooling/typescript/: package.json
turbo/generators/: config.ts
turbo/generators/templates/: package.json.hbs  (+1 more)
(+4 files in other folders)
