[project]
name = "eu-ai-act-agent"
version = "0.1.0"
description = "EU AI Act Compliance Agent with Gradio UI"
requires-python = ">=3.10"
dependencies = [
    "gradio[mcp]>=6.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gradio = "gradio_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

